# grimstad-courses-wiki

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: main.yaml
IKT100/innleveringer/: index.html
IKT100/overleaf/: index.html
IKT100/oving3/: index.html
IKT100/skjermbilder/: index.html
docs/: index.md  vm.md
docs/IKT100/: innleveringer.md  overleaf.md  oving3.md  skjermbilder.md
search/: search_index.json
vm/: index.html
